Working Java emitter